compiler/testData/multiplatform/incompatibleNestedClasses/output.txt
-- Common --
Exit code: OK
Output:
compiler/testData/multiplatform/incompatibleNestedClasses/common.kt:1:1: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
expect class O1 {
^^^^^^
compiler/testData/multiplatform/incompatibleNestedClasses/common.kt:2:11: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
    class N1
          ^^
compiler/testData/multiplatform/incompatibleNestedClasses/common.kt:3:15: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
    interface N2
              ^^
compiler/testData/multiplatform/incompatibleNestedClasses/common.kt:4:12: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
    object N3
           ^^
compiler/testData/multiplatform/incompatibleNestedClasses/common.kt:7:1: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
expect class O2 {
^^^^^^
compiler/testData/multiplatform/incompatibleNestedClasses/common.kt:8:11: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
    class N2
          ^^
compiler/testData/multiplatform/incompatibleNestedClasses/common.kt:9:17: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
    inner class I2
                ^^
compiler/testData/multiplatform/incompatibleNestedClasses/common.kt:12:1: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
expect class O3 {
^^^^^^
compiler/testData/multiplatform/incompatibleNestedClasses/common.kt:13:12: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
    object Companion
           ^^^^^^^^^
compiler/testData/multiplatform/incompatibleNestedClasses/common.kt:14:22: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
    companion object Factory
                     ^^^^^^^
compiler/testData/multiplatform/incompatibleNestedClasses/common.kt:17:1: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
expect class O4 {
^^^^^^
compiler/testData/multiplatform/incompatibleNestedClasses/common.kt:18:15: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
    companion object
              ^^^^^^

-- JVM --
Exit code: COMPILATION_ERROR
Output:
compiler/testData/multiplatform/incompatibleNestedClasses/jvm.kt:2:22: error: the 'expect' and the 'actual' declarations are incompatible.
  The 'expect' declaration: expect class N1 : Any
  The 'actual' declaration: actual interface N1 : Any
Reason: the class kinds are different (class, interface, object, enum, annotation)
    actual interface N1
                     ^^
compiler/testData/multiplatform/incompatibleNestedClasses/jvm.kt:3:19: error: the 'expect' and the 'actual' declarations are incompatible.
  The 'expect' declaration: expect interface N2 : Any
  The 'actual' declaration: actual object N2 : Any
Reason: the class kinds are different (class, interface, object, enum, annotation)
    actual object N2
                  ^^
compiler/testData/multiplatform/incompatibleNestedClasses/jvm.kt:4:18: error: the 'expect' and the 'actual' declarations are incompatible.
  The 'expect' declaration: expect object N3 : Any
  The 'actual' declaration: actual class N3 : Any
Reason: the class kinds are different (class, interface, object, enum, annotation)
    actual class N3
                 ^^
compiler/testData/multiplatform/incompatibleNestedClasses/jvm.kt:8:24: error: the 'expect' and the 'actual' declarations are incompatible.
  The 'expect' declaration: expect class N2 : Any
  The 'actual' declaration: actual inner class N2 : Any
Reason: the modifiers are different (companion, inner, inline, value)
    actual inner class N2
                       ^^
compiler/testData/multiplatform/incompatibleNestedClasses/jvm.kt:9:18: error: the 'expect' and the 'actual' declarations are incompatible.
  The 'expect' declaration: expect inner class I2 : Any
  The 'actual' declaration: actual class I2 : Any
Reason: the modifiers are different (companion, inner, inline, value)
    actual class I2
                 ^^
compiler/testData/multiplatform/incompatibleNestedClasses/jvm.kt:13:22: error: the 'expect' and the 'actual' declarations are incompatible.
  The 'expect' declaration: expect object Companion : Any
  The 'actual' declaration: actual companion object Companion : Any
Reason: the modifiers are different (companion, inner, inline, value)
    actual companion object {}
                     ^^^^^^
compiler/testData/multiplatform/incompatibleNestedClasses/jvm.kt:14:19: error: the 'expect' and the 'actual' declarations are incompatible.
  The 'expect' declaration: expect companion object Factory : Any
  The 'actual' declaration: actual object Factory : Any
Reason: the modifiers are different (companion, inner, inline, value)
    actual object Factory
                  ^^^^^^^
compiler/testData/multiplatform/incompatibleNestedClasses/jvm.kt:18:19: error: the 'expect' and the 'actual' declarations are incompatible.
  The 'expect' declaration: expect companion object Companion : Any
  The 'actual' declaration: actual object Companion : Any
Reason: the modifiers are different (companion, inner, inline, value)
    actual object Companion
                  ^^^^^^^^^
